Vertical Alignment for paragraph wasn't defined so bullet went to the bottom of the list item Fixes #172

--- a/themes/ropensci/static/css/sections.pcss
+++ b/themes/ropensci/static/css/sections.pcss
@@ -23,7 +23,7 @@ nav ul li {
 
 
 article ul li {
-    margin-bottom: .25rem;
+    margin: 15px 0;
     list-style-type: disc;
 }
 
@@ -251,8 +251,8 @@ article {
         }
     }
     & p {
-        margin: 7px 0;
         display: inline-block;
+        vertical-align: top;
     }
     & section {
         margin-bottom: 60px;
